created view page and displaying viewcount

--- a/blogWeb/src/app/pages/view-all/view-all.component.html
+++ b/blogWeb/src/app/pages/view-all/view-all.component.html
@@ -24,7 +24,7 @@
             <button mat-raised-button color="primary">{{item.likeCount}}<mat-icon>favorite</mat-icon></button>
             <button mat-raised-button color="primary"
                 style="margin-left: 5px;">{{item.viewCount}}<mat-icon>remove_red_eye</mat-icon></button>
-            <button mat-raised-button color="primary" style="margin-left: 5px;">View Post</button>
+            <button mat-raised-button color="primary" style="margin-left: 5px;" routerLink="/view-post/{{item.id}}">View Post</button>
         </mat-card-actions>
     </mat-card>
 
