--- a/blogWeb/src/app/pages/view-post/view-post.component.html
+++ b/blogWeb/src/app/pages/view-post/view-post.component.html
@@ -15,7 +15,7 @@
     </mat-chip-set>
 
     <mat-card-actions>
-        <button mat-raised-button color="primary">{{postData.likeCount}}<mat-icon>favorite</mat-icon></button>
+        <button mat-raised-button color="primary" (click)="likePost()">{{postData.likeCount}}<mat-icon>favorite</mat-icon></button>
         <button mat-raised-button color="primary" style="margin-left: 5px;">{{postData.viewCount}}<mat-icon>remove_red_eye</mat-icon></button>
     </mat-card-actions>
     </mat-card>
