--- a/blogWeb/src/app/pages/view-post/view-post.component.html
+++ b/blogWeb/src/app/pages/view-post/view-post.component.html
@@ -40,4 +40,17 @@
             </div>
         </mat-card-content>
     </mat-card>
+    <div style="margin-top: 10px;">
+        <h4>Comments</h4>
+        <mat-card style="margin-top: 10px;" *ngFor="let comment of comments">
+            <mat-card-header>
+                <div mat-card-avatar class="example-header-image"></div>
+                <mat-card-title>{{comment.postedBy}}</mat-card-title>
+                <mat-card-subtitle>Posted On : {{ comment.createdAt | date:'medium'}}</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                {{comment.content}}
+            </mat-card-content>
+        </mat-card>
+    </div>
 </div>
