--- a/blogWeb/src/app/app.component.html
+++ b/blogWeb/src/app/app.component.html
@@ -7,6 +7,7 @@
 
   <button mat-raised-button color="primary" routerLink="/create-post">Create New Post</button>
   <button mat-raised-button color="primary" routerLink="/view-all">View All Posts</button>
+  <button mat-raised-button color="primary" routerLink="/search-by-name">Search</button>
 
   <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
     <mat-icon>favorite</mat-icon>
